// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Typeahead /> Basic styling and functionality 1`] = `
.c6 {
  width: 2rem;
  height: 2rem;
  margin: 0;
}

.c7 {
  -webkit-transition: fill 0.2s linear;
  transition: fill 0.2s linear;
}

.c1 {
  margin: 0;
  width: 100%;
}

.c2 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid;
  border-color: #B2BEC0;
  border-radius: 0.3rem;
  -webkit-transition: border 0.2s linear;
  transition: border 0.2s linear;
  background-color: #FFF;
}

.c3:focus,
.c3:active,
.c3:hover {
  border-color: #197DA4;
}

.c4 {
  margin: 0;
  padding: 0 1.5rem;
  height: 5rem;
  width: 100%;
  font-size: 1.6rem;
  z-index: 1;
  color: #335257;
  background-color: inherit;
  border: 1px solid transparent;
  border-radius: 0.3rem;
}

.c4:focus,
.c4:active,
.c4:hover {
  outline: none;
}

.c4:focus::-webkit-input-placeholder,
.c4:active::-webkit-input-placeholder,
.c4:hover::-webkit-input-placeholder {
  color: #335257;
}

.c4:focus::-moz-placeholder,
.c4:active::-moz-placeholder,
.c4:hover::-moz-placeholder {
  color: #335257;
}

.c4:focus:-ms-input-placeholder,
.c4:active:-ms-input-placeholder,
.c4:hover:-ms-input-placeholder {
  color: #335257;
}

.c4:focus::placeholder,
.c4:active::placeholder,
.c4:hover::placeholder {
  color: #335257;
}

.c4:focus + .leading-icon,
.c4:active + .leading-icon,
.c4:hover + .leading-icon {
  border-color: #197DA4;
}

.c4::-webkit-input-placeholder {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  color: #7F9396;
}

.c4::-moz-placeholder {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  color: #7F9396;
}

.c4:-ms-input-placeholder {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  color: #7F9396;
}

.c4::placeholder {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  color: #7F9396;
}

.c4[disabled] {
  cursor: not-allowed;
  color: #EFEFEF;
}

.c4[disabled]::-webkit-input-placeholder {
  color: #EFEFEF;
}

.c4[disabled]::-moz-placeholder {
  color: #EFEFEF;
}

.c4[disabled]:-ms-input-placeholder {
  color: #EFEFEF;
}

.c4[disabled]::placeholder {
  color: #EFEFEF;
}

.c5 {
  background-color: transparent;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  height: 3rem;
  width: 3rem;
  margin: 1rem;
  -webkit-appearance: none !important;
  justify-self: flex-end;
}

.c5 svg path {
  fill: #197DA4;
}

.c0 {
  position: relative;
  margin: 0 0 2rem;
}

<div
  class="c0"
>
  <div
    class="c1"
    data-testid="test-input-wrapper"
    width="100%"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        data-testid="test-input-field_wrapper"
        type="text"
      >
        <input
          aria-invalid="false"
          aria-required="false"
          autocomplete="off"
          class="c4 "
          data-testid="test-input"
          id="test"
          name="test"
          placeholder=""
          type="text"
          value=""
        />
        <div
          class="c5 input__trailing-icon"
          data-testid="test-input-trailing_icon"
          type="button"
        >
          <svg
            class="c6"
            viewBox="0 0 24 24"
          >
            <path
              class="c7"
              d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
              fill="#00222b"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Typeahead /> Error state from 422 validation error 1`] = `
.c6 {
  width: 2rem;
  height: 2rem;
  margin: 0;
}

.c7 {
  -webkit-transition: fill 0.2s linear;
  transition: fill 0.2s linear;
}

.c8 {
  margin: 0.5rem 0 0;
  font-size: 1.4rem;
  line-height: 2rem;
  color: #CC0135;
}

.c1 {
  margin: 0;
  width: 100%;
}

.c2 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid;
  border-color: #B2BEC0;
  border-radius: 0.3rem;
  -webkit-transition: border 0.2s linear;
  transition: border 0.2s linear;
  background-color: #FFF;
  border-color: rgba(204,1,53,0.7);
}

.c3:focus,
.c3:active,
.c3:hover {
  border-color: #197DA4;
}

.c4 {
  margin: 0;
  padding: 0 1.5rem;
  height: 5rem;
  width: 100%;
  font-size: 1.6rem;
  z-index: 1;
  color: #335257;
  background-color: inherit;
  border: 1px solid transparent;
  border-radius: 0.3rem;
}

.c4:focus,
.c4:active,
.c4:hover {
  outline: none;
}

.c4:focus::-webkit-input-placeholder,
.c4:active::-webkit-input-placeholder,
.c4:hover::-webkit-input-placeholder {
  color: #335257;
}

.c4:focus::-moz-placeholder,
.c4:active::-moz-placeholder,
.c4:hover::-moz-placeholder {
  color: #335257;
}

.c4:focus:-ms-input-placeholder,
.c4:active:-ms-input-placeholder,
.c4:hover:-ms-input-placeholder {
  color: #335257;
}

.c4:focus::placeholder,
.c4:active::placeholder,
.c4:hover::placeholder {
  color: #335257;
}

.c4:focus + .leading-icon,
.c4:active + .leading-icon,
.c4:hover + .leading-icon {
  border-color: #197DA4;
}

.c4::-webkit-input-placeholder {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  color: #7F9396;
}

.c4::-moz-placeholder {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  color: #7F9396;
}

.c4:-ms-input-placeholder {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  color: #7F9396;
}

.c4::placeholder {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  color: #7F9396;
}

.c4[disabled] {
  cursor: not-allowed;
  color: #EFEFEF;
}

.c4[disabled]::-webkit-input-placeholder {
  color: #EFEFEF;
}

.c4[disabled]::-moz-placeholder {
  color: #EFEFEF;
}

.c4[disabled]:-ms-input-placeholder {
  color: #EFEFEF;
}

.c4[disabled]::placeholder {
  color: #EFEFEF;
}

.c5 {
  background-color: transparent;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  height: 3rem;
  width: 3rem;
  margin: 1rem;
  -webkit-appearance: none !important;
  justify-self: flex-end;
}

.c5 svg path {
  fill: #197DA4;
}

.c5 svg path {
  fill: #CC0135;
}

.c0 {
  position: relative;
  margin: 0 0 2rem;
}

<div
  class="c0"
>
  <div
    class="c1"
    data-testid="field_test-input-wrapper"
    width="100%"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        data-testid="field_test-input-field_wrapper"
        type="text"
      >
        <input
          aria-invalid="NOT_UNIQUE"
          aria-required="false"
          autocomplete="off"
          class="c4 "
          data-testid="field_test-input"
          id="field_test"
          name="field_test"
          placeholder=""
          type="text"
          value=""
        />
        <div
          class="c5"
          data-testid="field_test-trailing-icon"
        >
          <svg
            class="c6"
            viewBox="0 0 24 24"
          >
            <path
              class="c7"
              d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
              fill="#00222b"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class=""
      data-testid="field_test-input-error_wrapper"
    >
      <p
        class="c8"
        data-testid="field_test-error-message"
      >
        Field Test
         
        NOT_UNIQUE
      </p>
    </div>
  </div>
</div>
`;

exports[`<Typeahead /> Error state from error prop 1`] = `
.c6 {
  width: 2rem;
  height: 2rem;
  margin: 0;
}

.c7 {
  -webkit-transition: fill 0.2s linear;
  transition: fill 0.2s linear;
}

.c8 {
  margin: 0.5rem 0 0;
  font-size: 1.4rem;
  line-height: 2rem;
  color: #CC0135;
}

.c1 {
  margin: 0;
  width: 100%;
}

.c2 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid;
  border-color: #B2BEC0;
  border-radius: 0.3rem;
  -webkit-transition: border 0.2s linear;
  transition: border 0.2s linear;
  background-color: #FFF;
  border-color: rgba(204,1,53,0.7);
}

.c3:focus,
.c3:active,
.c3:hover {
  border-color: #197DA4;
}

.c4 {
  margin: 0;
  padding: 0 1.5rem;
  height: 5rem;
  width: 100%;
  font-size: 1.6rem;
  z-index: 1;
  color: #335257;
  background-color: inherit;
  border: 1px solid transparent;
  border-radius: 0.3rem;
}

.c4:focus,
.c4:active,
.c4:hover {
  outline: none;
}

.c4:focus::-webkit-input-placeholder,
.c4:active::-webkit-input-placeholder,
.c4:hover::-webkit-input-placeholder {
  color: #335257;
}

.c4:focus::-moz-placeholder,
.c4:active::-moz-placeholder,
.c4:hover::-moz-placeholder {
  color: #335257;
}

.c4:focus:-ms-input-placeholder,
.c4:active:-ms-input-placeholder,
.c4:hover:-ms-input-placeholder {
  color: #335257;
}

.c4:focus::placeholder,
.c4:active::placeholder,
.c4:hover::placeholder {
  color: #335257;
}

.c4:focus + .leading-icon,
.c4:active + .leading-icon,
.c4:hover + .leading-icon {
  border-color: #197DA4;
}

.c4::-webkit-input-placeholder {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  color: #7F9396;
}

.c4::-moz-placeholder {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  color: #7F9396;
}

.c4:-ms-input-placeholder {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  color: #7F9396;
}

.c4::placeholder {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  color: #7F9396;
}

.c4[disabled] {
  cursor: not-allowed;
  color: #EFEFEF;
}

.c4[disabled]::-webkit-input-placeholder {
  color: #EFEFEF;
}

.c4[disabled]::-moz-placeholder {
  color: #EFEFEF;
}

.c4[disabled]:-ms-input-placeholder {
  color: #EFEFEF;
}

.c4[disabled]::placeholder {
  color: #EFEFEF;
}

.c5 {
  background-color: transparent;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  height: 3rem;
  width: 3rem;
  margin: 1rem;
  -webkit-appearance: none !important;
  justify-self: flex-end;
}

.c5 svg path {
  fill: #197DA4;
}

.c5 svg path {
  fill: #CC0135;
}

.c0 {
  position: relative;
  margin: 0 0 2rem;
}

<div
  class="c0"
>
  <div
    class="c1"
    data-testid="field_test-input-wrapper"
    width="100%"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        data-testid="field_test-input-field_wrapper"
        type="text"
      >
        <input
          aria-invalid="Error content example"
          aria-required="false"
          autocomplete="off"
          class="c4 "
          data-testid="field_test-input"
          id="field_test"
          name="field_test"
          placeholder=""
          type="text"
          value=""
        />
        <div
          class="c5"
          data-testid="field_test-trailing-icon"
        >
          <svg
            class="c6"
            viewBox="0 0 24 24"
          >
            <path
              class="c7"
              d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
              fill="#00222b"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class=""
      data-testid="field_test-input-error_wrapper"
    >
      <p
        class="c8"
        data-testid="field_test-error-message"
      >
        Field Test
         
        Error content example
      </p>
    </div>
  </div>
</div>
`;
